--- a/config.toml
+++ b/config.toml
@@ -17,6 +17,11 @@ disableKinds = ["taxonomyTerm"]
 		title = "Shoko"
 		languageName = "English"
 		weight = 1
+	[languages.zh-CN]
+		contentDir = "content/zh-CN"
+		title = "Shoko"
+		languageName = "简体中文"
+		weight = 2
 
 [params]
 	images = ["icon.png"]
